--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   "author": "ChrisSensebe",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^2.6.2",
-    "@types/node": "^9.4.0"
+    "@types/express": "^4.11.1",
+    "@types/node": "^9.4.0",
+    "express": "^4.16.2",
+    "typescript": "^2.6.2"
   },
   "devDependencies": {
-    "jest": "^22.1.4",
     "@types/jest": "^22.1.1",
+    "@types/supertest": "^2.0.4",
+    "jest": "^22.1.4",
     "nodemon": "^1.14.11",
+    "supertest": "^3.0.0",
     "ts-jest": "^22.0.2",
     "tslint": "^5.9.1"
   }
