--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/express": "^4.11.1",
     "@types/node": "^9.4.0",
+    "axios": "^0.17.1",
     "express": "^4.16.2",
     "typescript": "^2.6.2"
   },
