--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "test": "node_modules/.bin/jest --forceExit --coverage --verbose --passWithNoTests",
     "build": "node_modules/.bin/tsc",
     "watch:build": "tsc -w",
-    "watch:start": "nodemon dist/server.js",
+    "watch:start": "nodemon dist/src/server.js",
     "watch:test": "node_modules/.bin/jest --coverage --verbose --watch",
     "watch:testAll": "node_modules/.bin/jest --coverage --verbose --watchAll"
   },
