--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@types/express": "^4.11.1",
     "@types/node": "^9.4.0",
+    "@types/rx": "^4.1.1",
     "axios": "^0.17.1",
     "express": "^4.16.2",
+    "rxjs": "^5.5.6",
     "typescript": "^2.6.2"
   },
   "devDependencies": {
